--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@tailwindcss/vite": "^4.1.4",
     "firebase": "^11.6.1",
     "react": "^19.0.0",
+    "react-clock": "^5.1.0",
     "react-countup": "^6.5.3",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-rating": "^2.0.5",
     "react-router": "^7.5.2",
     "react-simple-star-rating": "^5.1.7",
     "react-toastify": "^11.0.5",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.21.2",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.4"
   },
