--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-rating": "^2.0.5",
     "react-router": "^7.5.2",
     "react-simple-star-rating": "^5.1.7",
+    "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.5",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.21.2",
