--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.4",
+    "@tailwindcss/vite": "^4.1.7",
     "firebase": "^11.6.1",
     "react": "^19.0.0",
     "react-clock": "^5.1.0",
@@ -26,18 +26,26 @@
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.21.2",
     "swiper": "^11.2.6",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@tailwindcss/postcss": "^4.1.7",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
     "daisyui": "^5.0.28",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5.3",
     "vite": "^6.3.1"
-  }
+  },
+  "description": "A modern event management platform built with React, Firebase, Tailwind CSS, and DaisyUI, designed to help users discover, manage, and interact with local events like conferences, exhibitions, sports, and workshops.",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
